# admm

./: .gitignore  README.md  addm.ipynb  admm.ipynb  experiments.ipynb  pyproject.toml  requirements.txt  solverMdMCQKP.py  Перебор вариантов для констант.xlsx
loader/: README.md  pyproject.toml
solver/: README.md  pyproject.toml  requirements.txt
src/qmdmckp/: QMdMcKnapsack.py
src/solver_knapsack_makselivanov/: __init__.py  solverMdMCQKP.py
tests/: README.md  constant_optimization.py  constant_optimization_annealing.py  example.py  optimization_annealing_results.txt
tests/data/: example.txt  qmdmckp_100_100_1_0_1.txt  qmdmckp_100_100_1_0_10.txt  qmdmckp_100_100_1_0_2.txt  qmdmckp_100_100_1_0_3.txt  qmdmckp_100_100_1_0_5.txt  qmdmckp_100_100_1_0_6.txt  qmdmckp_100_100_1_0_7.txt  qmdmckp_100_100_1_0_8.txt  qmdmckp_100_100_1_0_9.txt  qmdmckp_100_25_1_0_1.txt  qmdmckp_100_25_1_0_10.txt  qmdmckp_100_25_1_0_2.txt  qmdmckp_100_25_1_0_3.txt  qmdmckp_100_25_1_0_4.txt  qmdmckp_100_25_1_0_5.txt  qmdmckp_100_25_1_0_6.txt  qmdmckp_100_25_1_0_7.txt  qmdmckp_100_25_1_0_8.txt  qmdmckp_100_25_1_0_9.txt  qmdmckp_100_50_1_0_1.txt  qmdmckp_100_50_1_0_10.txt  qmdmckp_100_50_1_0_2.txt  qmdmckp_100_50_1_0_3.txt  qmdmckp_100_50_1_0_4.txt  qmdmckp_100_50_1_0_5.txt  qmdmckp_100_50_1_0_6.txt  qmdmckp_100_50_1_0_7.txt  qmdmckp_100_50_1_0_8.txt  qmdmckp_100_50_1_0_9.txt  qmdmckp_100_75_1_0_1.txt  qmdmckp_100_75_1_0_10.txt  qmdmckp_100_75_1_0_2.txt  qmdmckp_100_75_1_0_3.txt  qmdmckp_100_75_1_0_4.txt  qmdmckp_100_75_1_0_5.txt  qmdmckp_100_75_1_0_6.txt  qmdmckp_100_75_1_0_7.txt  (+62 more)
(+128 files in other folders)
