[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
dynamic = ["dependencies"]
name = "solver_knapsack_makselivanov"
version = "0.0.3"
authors = [
    { name="Makar Selivanov", email="makar.selivanov@gmail.com" }
]
description = "Library for solving knapsack problem using admm with quantum-inspired solver"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/makselivanov/admm"
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}